# mempalace-fork

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  ONBOARDING.md  README.md  entities.json  mempalace.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.codex-plugin/: README.md  plugin.json
.omc/: project-memory.json
.repowise/: mcp.json
examples/: gemini_cli_setup.md  mcp_setup.md
mempalace/: F176_phase2_metadata_contract.md  README.md  __init__.py  circuit_breaker.py  claims_manager.py  cli.py  config.py  convo_miner.py  decision_tracker.py  diagnostics.py  dialect.py  embed_daemon.py  embed_metadata.py  entity_registry.py  exceptions.py  fastmcp_server.py  general_extractor.py  handoff_manager.py  hooks_cli.py  knowledge_graph.py  layers.py  lexical_index.py  mcp_server.py  memory_guard.py  middleware.py  migrate.py  miner.py  mining_manifest.py  namespaces.py  onboarding.py  palace.py  palace_graph.py  path_index.py  query_cache.py  query_sanitizer.py  recent_changes.py  retrieval_planner.py  searcher.py  session_registry.py  settings.py  (+5 more)
probe_chroma_remove/: PHASE2_LANCE_ONLY_TESTS_REPORT.md  PHASE3_LANCE_CODEBASE_RAG_E2E_REPORT.md  PHASE4_CHROMA_RUNTIME_REMOVAL_REPORT.md
probe_codeintel/: PHASE12_AST_CODE_INTEL_UPGRADE_REPORT.md  PHASE35_INCREMENTAL_CODE_INDEX_CALL_GRAPH_REPORT.md  PHASE42_CODE_INTEL_EXPLAINABILITY_REPORT.md
probe_database/: PHASE32_PATH_METADATA_INDEX_REPORT.md  PHASE39_PATHINDEX_SQL_OPTIMIZATION_REPORT.md
probe_docs/: PHASE27_PRIVATE_FORK_README_TRUTH_CLEANUP_REPORT.md
probe_embeddings/: PHASE34_EMBEDDING_PROVIDER_COMPATIBILITY_LOCK_REPORT.md  PHASE41_EMBEDDING_METADATA_HOTPATH_BUDGET_REPORT.md
probe_eval/: PHASE15_HLEDAC_EVAL_ABORT_FIX_REPORT.md  PHASE17_SOURCE_CODE_FIRST_RANKING_REPORT.md  PHASE18_EVAL_EMBEDDING_TRUTH_SEAL_REPORT.md  PHASE22_PRE_SLICE_RANKING_CORRECTNESS_REPORT.md  PHASE7_HLEDAC_REAL_CODE_RAG_EVAL_REPORT.md  hledac_code_rag_eval.json
probe_final/: PHASE13_PRIVATE_DAILY_DRIVER_SEAL_REPORT.md  PHASE14_REPOSITORY_SYNC_REALITY_SEAL_REPORT.md  PHASE16_EVAL_SYNC_TRUTH_CLEANUP_REPORT.md  PHASE28_FINAL_REALITY_SEAL_REPORT.md  PHASE29_PATH_QUERY_METADATA_FIRST_SEAL_REPORT.md  PHASE37_NEW_LAYER_REALITY_AUDIT_REPORT.md
probe_mcp/: PHASE33_MCP_RESPONSE_CONTRACT_REPORT.md  PHASE38_MCP_CONTRACT_HARDENING_REPORT.md  PHASE43_SYMBOL_TOOLS_CONTRACT_UNIFICATION_REPORT.md  PHASE45_EMBEDDING_DETECTION_HOTPATH_VERIFICATION_REPORT.md  PHASE46_RESPONSE_CONTRACT_REALITY_SYNC_REPORT.md
probe_mining/: PHASE19_STREAMING_BUDGETED_MINING_REPORT.md
probe_plugin/: PHASE0_PLUGIN_REALITY_REPORT.md  PHASE0_STATIC_CHECK.sh  PHASE10_PLUGIN_COMMANDS_SKILLS_POLISH_REPORT.md  PHASE21_WORKFLOW_UX_GUARDRAILS_REPORT.md  PHASE36_CLAUDE_CODE_STARTUP_CONTEXT_PACK_REPORT.md  PHASE40_STARTUP_CONTEXT_PROVIDER_TRUTH_REPORT.md  PHASE44_STARTUP_CONTEXT_FINAL_TRUTH_REPORT.md  PHASE5_LIFECYCLE_TEST.py  PHASE5_PLUGIN_LIFECYCLE_REPORT.md  PHASE6_PLUGIN_LIFECYCLE_RUNTIME_SEAL_REPORT.md  PHASE7_SKILLS_REPORT.md
probe_post_refactor/: PHASE5A_REALITY_SEAL_REPORT.md  PHASE5B_DEDUP_SCOPE_CLASSIFIER_SSOT_REPORT.md  PHASE5C_PY314_RUNTIME_TRUTH_REPORT.md  PHASE5D_REAL_DEDUP_PATH_SEAL_REPORT.md  PHASE5E_POST_DIAGNOSTIC_CLEANUP_REPORT.md  PHASE5F_DIAG_GUARD_FIX_REPORT.md
probe_runtime/: PHASE20_RUNTIME_DOCTOR_DAEMON_TRUTH_REPORT.md  PHASE25_EMBED_DAEMON_REQUEST_GUARDS_REPORT.md  PHASE26_RUNTIME_DOCTOR_LIGHTWEIGHT_IMPORT_AUDIT_REPORT.md  PHASE8_M1_RUNTIME_BENCH_REPORT.md  benchmark_report.json  doctor_report.json
probe_security/: PHASE11_FILE_CONTEXT_SCOPE_HARDENING_REPORT.md  PHASE23_STRICT_FILE_CONTEXT_SECURITY_REPORT.md
probe_tools/: PHASE24_PROJECT_PATH_TOOLING_CONSISTENCY_REPORT.md
probe_workflow/: PHASE9_SIX_SESSION_WORKFLOW_SEAL_REPORT.md
scripts/: code_rag_eval.py  dev_server.sh  doctor.py  eval_hledac_code_rag.py  import_convergence_check.py  m1_rag_benchmark.py  m1_runtime_doctor.py  start_server.sh
si_concurrent_4430884608/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_concurrent_4715021024/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_concurrent_4724261152/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_concurrent_4724347776/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_concurrent_4773041584/: symbol_index.sqlite3-shm  symbol_index.sqlite3-wal
si_concurrent_4777640336/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_concurrent_4785422512/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_concurrent_5348579520/: symbol_index.sqlite3-shm  symbol_index.sqlite3-wal
si_concurrent_5647782448/: symbol_index.sqlite3-shm  symbol_index.sqlite3-wal
si_readwrite_4715021024/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_readwrite_4724266752/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_readwrite_4724347776/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_readwrite_4773041584/: symbol_index.sqlite3-shm  symbol_index.sqlite3-wal
si_readwrite_4777640336/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_readwrite_4785422512/: symbol_index.sqlite3  symbol_index.sqlite3-shm
si_readwrite_5348579520/: symbol_index.sqlite3-shm  symbol_index.sqlite3-wal
si_readwrite_5647782448/: symbol_index.sqlite3-shm  symbol_index.sqlite3-wal
tests/: conftest.py  test_ast_extractor.py  test_backend_contracts.py  test_backend_defaults.py  test_background_work_bounded.py  test_batch_behavior.py  test_batch_dedup.py  test_bugfixes.py  test_cache_contract.py  test_circuit_breaker.py  test_claim_enforcement.py  (+109 more)
(+200 files in other folders)
