[project]
name = "mempalace"
version = "3.1.0"
description = "Give your AI a memory — mine projects and conversations into a searchable palace. No API key required."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Hamulda"},
]
keywords = [
    "ai", "memory", "llm", "rag", "mcp",
    "vector-database", "claude", "embeddings",
    "lancedb", "palace",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "lancedb>=0.20.0",
    "fastembed>=0.4.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0,<7",
    "pydantic-settings>=2.0.0",
    "fastmcp>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/Hamulda/mempalace-fork"
Repository = "https://github.com/Hamulda/mempalace-fork"
"Bug Tracker" = "https://github.com/Hamulda/mempalace-fork/issues"

[project.scripts]
mempalace = "mempalace:main"
mempalace-embed-daemon = "mempalace.embed_daemon:run_daemon"

[project.optional-dependencies]
# ChromaDB — legacy compatibility only, NOT a default. Use only if LanceDB is unavailable.
chromadb = [
    "chromadb>=0.5.0,<0.7",
]
apple = [
    "mlx>=0.26.0",
    "mlx-embeddings @ git+https://github.com/Blaizzy/mlx-embeddings.git",
]
rerank = [
    "sentence-transformers>=2.0",
    "rank-bm25>=0.2",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-timeout>=2.0", "ruff>=0.4.0", "psutil>=5.9"]
spellcheck = ["autocorrect>=2.0"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4.0",
    "psutil>=5.9",
    "chromadb>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mempalace"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not benchmark and not slow and not stress' --timeout=30"
asyncio_mode = "auto"
markers = [
    "benchmark: scale/performance benchmark tests",
    "slow: tests that take more than 30 seconds",
    "stress: destructive scale tests (100K+ drawers)",
]

[tool.coverage.run]
source = ["mempalace"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
